[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-helpers"
version = "0.0.1"
description = "A project for Jupyter notebook helper functions."
authors = [
    { name = "Arthur Ryman", email = "arthur.ryman@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://agryman.github.io/"
"Documentation" = "https://agryman.github.io/"
"Issue Tracker" = "https://agryman.github.io/"

[tool.setuptools]
package-dir = {"" = "src"}    # Specifies that the packages are located in the 'src' directory

[tool.setuptools.packages.find]
where = ["src"]              # Search for packages in the 'src' directory
